# cpp-ecs-game-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  make-resources.py
app/: CMakeLists.txt  main.cpp  resources2.cpp
include/: algebra.hpp  camera.hpp  component.hpp  engine.hpp  entity.hpp  input.hpp  random.hpp  resources.hpp  scene.hpp  simd.hpp  vectors.hpp
include/collision/: collider.hpp  physics.hpp  segment.hpp
include/components/: rigidbody.hpp  spriterenderer.hpp
include/engine/: camera.hpp  component.hpp  engine.hpp  entity.hpp  input.hpp  resources.hpp  scene.hpp  vectors.hpp
include/engine/collision/: collider.hpp  physics.hpp  segment.hpp
include/engine/components/: rigidbody.hpp  spriterenderer.hpp
include/engine/event/: event_handler.hpp  event_manager.hpp
include/engine/io/: serialize.hpp
include/engine/rendering/: bounds.hpp  boxrenderer.hpp  font.hpp  graphics.hpp  renderer.hpp  sprite.hpp
include/engine/ui/: text.hpp
include/game/: charactercontroller.hpp  tilerenderer.hpp
include/rendering/: bounds.hpp  boxrenderer.hpp  graphics.hpp  renderer.hpp
scripts/: make-resources.py
src/: CMakeLists.txt  component.cpp  engine.cpp  entity.cpp  graphics.cpp  input.cpp  main.cpp  random.cpp  scene.cpp  simd.cpp
src/collision/: collider.cpp  physics.cpp  segment.cpp
src/components/: rigidbody.cpp
src/engine/: component.cpp  engine.cpp  input.cpp  random.cpp
src/engine/collision/: collider.cpp  physics.cpp  segment.cpp
src/engine/components/: rigidbody.cpp  spriterenderer.cpp
src/engine/event/: event_handler.cpp  event_manager.cpp
src/engine/rendering/: bounds.cpp  boxrenderer.cpp  font.cpp  graphics.cpp  renderer.cpp  sprite.cpp
src/engine/ui/: text.cpp
src/game/: charactercontroller.cpp  main.cpp
src/rendering/: bounds.cpp  boxrenderer.cpp  graphics.cpp  renderer.cpp  sprite.cpp
test/: CMakeLists.txt
test/engine/event/: event-test.cpp
test/engine/io/: serialize_test.cpp
